force-app/main/default/objects/Claim_Contact__c/Claim_Contact__c.object-meta.xml
<CustomObject>
    <label>Claim Contact</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>Claim Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>