force-app/main/default/objects/Claim_Contact__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim</label>
    <referenceTo>Policy_Claim__c</referenceTo>
    <relationshipLabel>Claim Contacts</relationshipLabel>
    <relationshipName>Claim_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>