force-app/main/default/objects/Claim_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Claim Contacts</relationshipLabel>
    <relationshipName>Claim_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>