force-app/main/default/objects/Claim_Contact__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Claimant Attorney</fullName>
            </value>
            <value>
                <fullName>Claimant Firm</fullName>
            </value>
            <value>
                <fullName>Coverage Firm</fullName>
            </value>
            <value>
                <fullName>Deductible</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Defense Attorney</fullName>
            </value>
            <value>
                <fullName>Defense Expert</fullName>
            </value>
            <value>
                <fullName>Defense Firm</fullName>
            </value>
            <value>
                <fullName>Plaintiff Expert</fullName>
            </value>
            <value>
                <fullName>Trial Judge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>